{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 3362,
  "lineage": "2fcdc487-f9b3-6323-f74d-ddd7f71aac7a",
  "resources": [
    {
      "module": "module.aws_vpc.module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kinesis-streams",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:vpc-endpoint/vpce-02a90d822680a5ace",
            "dns_entry": [
              {
                "dns_name": "vpce-02a90d822680a5ace-tackwy4u.kinesis.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-02a90d822680a5ace-tackwy4u-ap-southeast-2b.kinesis.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-02a90d822680a5ace-tackwy4u-ap-southeast-2a.kinesis.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "kinesis.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z07691601JQ9DXUTPMGA1"
              },
              {
                "dns_name": "control-kinesis.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z07672811PKNJG4THCRTG"
              },
              {
                "dns_name": "*.control-kinesis.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z07672811PKNJG4THCRTG"
              },
              {
                "dns_name": "data-kinesis.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z08280323T9URPED0Y1O5"
              },
              {
                "dns_name": "*.data-kinesis.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z08280323T9URPED0Y1O5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02a90d822680a5ace",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07a0bed76b0e9117f",
              "eni-0c91cb138d9551303"
            ],
            "owner_id": "136146594194",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057795007721d0ffa"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.kinesis-streams",
            "state": "available",
            "subnet_ids": [
              "subnet-01a856ab77b48006f",
              "subnet-09a90cd0906f3aa71"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-kinesis-vpc-interface-endpoint",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-kinesis-vpc-interface-endpoint",
              "Project": "mars"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.endpoints.aws_security_group.this",
            "module.aws_vpc.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_subnet.private",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:vpc-endpoint/vpce-02e54ecd780f5dced",
            "cidr_blocks": [
              "3.5.164.0/22",
              "3.5.168.0/23",
              "52.95.128.0/21"
            ],
            "id": "vpce-02e54ecd780f5dced",
            "owner_id": "136146594194",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-073d6216135d12474",
              "rtb-0af5240681b0efafb"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-s3-vpc-gw-endpoint",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-s3-vpc-gw-endpoint",
              "Project": "mars"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.endpoints.aws_security_group.this",
            "module.aws_vpc.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_subnet.private",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:vpc-endpoint/vpce-09d8c98bf74752e39",
            "dns_entry": [
              {
                "dns_name": "vpce-09d8c98bf74752e39-g7rv0jdh.sts.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-09d8c98bf74752e39-g7rv0jdh-ap-southeast-2b.sts.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-09d8c98bf74752e39-g7rv0jdh-ap-southeast-2a.sts.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "sts.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z083510431A646RFOMVX5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09d8c98bf74752e39",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-017317cd94f0a9d8d",
              "eni-0547ab1cd538edd61"
            ],
            "owner_id": "136146594194",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057795007721d0ffa"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-01a856ab77b48006f",
              "subnet-09a90cd0906f3aa71"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-sts-vpc-interface-endpoint",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-sts-vpc-interface-endpoint",
              "Project": "mars"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.endpoints.aws_security_group.this",
            "module.aws_vpc.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_subnet.private",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:network-acl/acl-07e725adb8975899a",
            "default_network_acl_id": "acl-07e725adb8975899a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07e725adb8975899a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "136146594194",
            "subnet_ids": [
              "subnet-01a856ab77b48006f",
              "subnet-09a90cd0906f3aa71",
              "subnet-0e74147c9e7e1ac15"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-default",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-default",
              "Project": "mars"
            },
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:route-table/rtb-0a3a5271ef8a9f97a",
            "default_route_table_id": "rtb-0a3a5271ef8a9f97a",
            "id": "rtb-0a3a5271ef8a9f97a",
            "owner_id": "136146594194",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-default",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-default",
              "Project": "mars"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:security-group/sg-057795007721d0ffa",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057795007721d0ffa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "136146594194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-sg",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-sg",
              "Project": "mars"
            },
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a1d7320f89978a0",
            "domain": "vpc",
            "id": "eipalloc-01a1d7320f89978a0",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-253-106-228.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.253.106.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-ap-southeast-2a",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-ap-southeast-2a",
              "Project": "mars"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_internet_gateway.this",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:internet-gateway/igw-01b1daba0906ab8dc",
            "id": "igw-01b1daba0906ab8dc",
            "owner_id": "136146594194",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc",
              "Project": "mars"
            },
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a1d7320f89978a0",
            "association_id": "eipassoc-09d95db4b5e0626eb",
            "connectivity_type": "public",
            "id": "nat-028e5d39ef6ada036",
            "network_interface_id": "eni-0d8055bd440de5b30",
            "private_ip": "10.4.26.102",
            "public_ip": "54.253.106.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e74147c9e7e1ac15",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-ap-southeast-2a",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-ap-southeast-2a",
              "Project": "mars"
            }
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_eip.nat",
            "module.aws_vpc.module.vpc.aws_internet_gateway.this",
            "module.aws_vpc.module.vpc.aws_subnet.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af5240681b0efafb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-028e5d39ef6ada036",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af5240681b0efafb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_eip.nat",
            "module.aws_vpc.module.vpc.aws_internet_gateway.this",
            "module.aws_vpc.module.vpc.aws_nat_gateway.this",
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_subnet.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01b1daba0906ab8dc",
            "id": "r-rtb-073d6216135d124741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073d6216135d12474",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_internet_gateway.this",
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:route-table/rtb-0af5240681b0efafb",
            "id": "rtb-0af5240681b0efafb",
            "owner_id": "136146594194",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-private",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-private",
              "Project": "mars"
            },
            "timeouts": null,
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:route-table/rtb-073d6216135d12474",
            "id": "rtb-073d6216135d12474",
            "owner_id": "136146594194",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-public",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-public",
              "Project": "mars"
            },
            "timeouts": null,
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04421a6850999524f",
            "route_table_id": "rtb-0af5240681b0efafb",
            "subnet_id": "subnet-01a856ab77b48006f"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_subnet.private",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c551b2045d00889",
            "route_table_id": "rtb-0af5240681b0efafb",
            "subnet_id": "subnet-09a90cd0906f3aa71"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_subnet.private",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e22e38568365139a",
            "route_table_id": "rtb-073d6216135d12474",
            "subnet_id": "subnet-0e74147c9e7e1ac15"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_subnet.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:subnet/subnet-01a856ab77b48006f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.4.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a856ab77b48006f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136146594194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-private-ap-southeast-2a",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-private-ap-southeast-2a",
              "Project": "mars"
            },
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:subnet/subnet-09a90cd0906f3aa71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.4.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a90cd0906f3aa71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136146594194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-private-ap-southeast-2b",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-private-ap-southeast-2b",
              "Project": "mars"
            },
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:subnet/subnet-0e74147c9e7e1ac15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.4.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e74147c9e7e1ac15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136146594194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-public-ap-southeast-2a",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc-public-ap-southeast-2a",
              "Project": "mars"
            },
            "vpc_id": "vpc-086f1f2b8146bb68b"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136146594194:vpc/vpc-086f1f2b8146bb68b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-07e725adb8975899a",
            "default_route_table_id": "rtb-0a3a5271ef8a9f97a",
            "default_security_group_id": "sg-057795007721d0ffa",
            "dhcp_options_id": "dopt-0f24b3d57527c3c4d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086f1f2b8146bb68b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3a5271ef8a9f97a",
            "owner_id": "136146594194",
            "tags": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc",
              "Project": "mars"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mars-aws-dev-vpc",
              "Project": "mars"
            }
          }
        }
      ]
    }
  ]
}